max height problem has been fixed on mobile

--- a/src/pages/Detail/detail.css
+++ b/src/pages/Detail/detail.css
@@ -158,7 +158,9 @@ h4 {
   .detail__image {
     height: 300px;
   }
-
+  .detail__image img {
+    max-height: 300px;
+  }
   .btn-add-cart {
     width: 100%;
     height: 48px;
